Development Portal (2020-06-26 shi)
==============================
Fix z-index of utter link
Fix code-name recipient-region in transaction table


Development Portal (2020-06-24 shi)
==============================
Fix refine search COVID-19
Add feedback mechanism


Development Portal (2020-06-17 shi)
==============================
Update print body and table font colour
Update savi css theme button


Development Portal (2020-06-12 shi)
==============================
Display exchange rates and currencies logic on data pages
Update all translations


Development Portal (2020-06-11 shi)
==============================
Testing region, org type and hierarchy filters
Update glossary for search2
Display if reporting-org is @secondary-reporter
Update css
Update hierarchy filter
Fix data_quality css
Fix about_data link
Fix FAQ sequence
Display location pos link regardless of @srsName


Development Portal (2020-06-05 shi)
==============================
Updated recipient-country layout for document-links
Display all links in new tab for new SAVi
Update vocab geonames link for location-id
Add hover titles for location sub-elements
Display point/pos as separate @lat/@long
Add url to Google maps for point/pos


Development Portal (2020-06-01 shi)
==============================
Display V1 banner for new SAVi
Remove max-width for length to compensate for many transactions


Development Portal (2020-05-23 shi)
==============================
Fix Dash css


Development Portal (2020-05-15 shi)
==============================
Clean up landing page
Update glossary for COVID-19 trending button
Update footer with dquery link
Update all translations


Development Portal (2020-05-12 shi)
==============================
Fix generator css chunk name


Development Portal (2020-05-06 shi)
==============================
Display recipient-country in org file document-link


Development Portal (2020-05-04 shi)
==============================
Min-width for missing dates table