@@ -72,28 +72,34 @@
 <div onclick="$('#utter_wrap').toggle();" class="utter_link">&#128172;</div>
 <div id="utter_wrap">
 	<div onclick="$('#utter_wrap').toggle();" class="utter_link">&#10005;</div>
-	<div class="utter_text">Hello! Do you have a question about d-portal? Please send us your comments below.</div>
-	<div class="utter_box" id="insert_utter_code">
-		<script>
-			$(function(){
-				let randomid=(new Date)+'';
-				let s = document.createElement("script");
-					s.type  = "text/javascript";
-					s.setAttribute("src","https://utteranc.es/client.js")
-					s.setAttribute("repo","notshi/IATIswitcheroo")
-					s.setAttribute("issue-term","Comment on "+randomid)
-					s.setAttribute("label","question")
-					s.setAttribute("theme","github-light")
-					s.setAttribute("crossorigin","anonymous")
-					s.setAttribute("async","1")
-				let e=document.getElementById("insert_utter_code")
-				if(!e.getAttribute("donestuff"))
-				{
-					e.setAttribute("donestuff","1")
-					e.appendChild(s)
-				}
-			})
-		</script>
+	<div class="utter_text">
+		Hello! Do you have a question about d-portal? Please send us your comments below.
+		<span>This creates an issue on <a href="https://github.com/devinit/D-Portal/issues">the feedback forum</a>.</span>
+	</div>
+	<div class="utter_box_wrap">
+		<div class="utter_box" id="insert_utter_code">
+			<script>
+				$(function(){
+					let randomid=(new Date)+'';
+					let s = document.createElement("script");
+						s.type  = "text/javascript";
+						s.setAttribute("src","https://utteranc.es/client.js")
+						s.setAttribute("repo","notshi/IATIswitcheroo")
+						s.setAttribute("issue-term","Comment on "+randomid)
+						s.setAttribute("label","question")
+						s.setAttribute("theme","github-light")
+						s.setAttribute("crossorigin","anonymous")
+						s.setAttribute("async","1")
+					let e=document.getElementById("insert_utter_code")
+					if(!e.getAttribute("donestuff"))
+					{
+						e.setAttribute("donestuff","1")
+						e.appendChild(s)
+					}
+				})
+			</script>
+		</div>
+		<div class="utter_block"></div>
 	</div>
 </div>
 
