@@ -1,3 +1,8 @@
+Development Portal (2020-07-01 shi)
+==============================
+Update utter box with explicit info
+
+
 Development Portal (2020-06-26 shi)
 ==============================
 Fix z-index of utter link
